--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
         body {
             background-image: url('images/blinds.png');
             background-repeat: repeat;
+            font-family: monospace;
         }
     </style>
 </head>
